canary/rollout-demo-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollout-demo-vs
spec:
  gateways:
  - rollout-demo-gateway
  hosts:
  - rollout-demo.example.com
  http:
  - name: canary
    route:
    - destination:
        host: rollouts-demo
        port:
          number: 80
      weight: 100
    - destination:
        host: rollouts-demo-preview
        port:
          number: 80
      weight: 0
